moved menubar still need to polish

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -160,3 +160,47 @@ body {
     }
   }
 }
+
+.page-header {
+	background-color: white;
+	margin-top: 0;
+	padding: 20px 20px 20px 40px;
+  h1 {
+    color: @dark;
+    font-size: 36px;
+    text-decoration: none;
+      a {
+        color: @dark;
+        font-size: 36px;
+        text-decoration: none;
+          &:active {
+            color: @dark;
+            font-size: 36px;
+            text-decoration: none;
+    }
+  }
+}
+&:visited {
+  color: @dark;
+  font-size: 36px;
+  text-decoration: none;
+}
+.top-menu {
+	color: @dark;
+	float: right;
+	font-size: 26px;
+	margin-right: 20px;
+	&:hover {
+		color: @dark;
+		float: right;
+		font-size: 26px;
+		margin-right: 20px;
+	}
+	&:visited {
+		color: @dark;
+		float: right;
+		font-size: 26px;
+		margin-right: 20px;
+	}
+}
+}
