--- a/views/dinw/layout.pug
+++ b/views/dinw/layout.pug
@@ -2,22 +2,22 @@ doctype html
 html
   head
     title dine 
+    link(rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css")
+    link(rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css")
     link(rel="stylesheet" type="text/css" href="/stylesheets/style.css")
     link(rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:300,600")
     meta(name="viewport" content="width=device-width, initial-scale=.7, maximum-scale=.7")
     
-  - var menu = { "home": "/", "about": "/about", "projects": "/projects" }
+  .page-header
+    a.top-menu(href="/") home
+    span
+    a.top-menu(href="/about") about
+    span
+    a.top-menu(href="/projects") projects
+      h1
+        a(href="/") dinw
+    
     
   body
     div#content
       block content
-      
-    div#footer
-      ul#nav
-        each val, key in menu
-          li
-            if page == key
-              a.selected(href=val)= key
-            else
-              a(href=val)= key
-            
