fixed white bar

--- a/views/dinw/home.pug
+++ b/views/dinw/home.pug
@@ -13,3 +13,5 @@ block content
     a(href="https://twitter.com/dine_osu") twitter
    li
     a(href="https://discord.gg/UfsupHX") discord
+   li
+    a(href="https://github.com/Dinekin") github
