--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -101,74 +101,15 @@ body {
   }
 }
 
-#footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-
-  #nav {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    margin-top: 80px;
-    margin-right: 20px;
-    font-size: 24px;
-
-    li {
-      margin: 0 30px;
-      display: inline;
-
-      a {
-        text-decoration: none;
-        color: @dark;
-        font-weight: 400;
-        transition-duration: .15s;
-
-        &hover {
-          color: white;
-        }
-      }
-
-    .selected {
-      text-decoration: none;
-      color: white;
-      font-weight: 400;
-      border-top: 2px solid white;
-      padding-top: 2px;
-      }
-    }
-  }
-
-  #logo {
-    margin: 25px 0;
-    background: none;
-    border: 2px solid @dark;
-    padding: 10px;
-    font-size: 24px;
-    letter-spacing: 6px;
-    color: @dark;
-    transition-duration: .15s;
-
-    &:hover {
-      color: white;
-      border-color: white;
-    }
-
-    .gray {
-      color: @dark;
-    }
-  }
-}
-
 .page-header {
 	background-color: white;
 	margin-top: 0;
-	padding: 20px 20px 20px 40px;
+	padding: 5px 10px;
   h1 {
     color: @dark;
     font-size: 36px;
     text-decoration: none;
+    margin: 0;
       a {
         color: @dark;
         font-size: 36px;
