added useless text

--- a/views/dinw/layout.pug
+++ b/views/dinw/layout.pug
@@ -1,13 +1,13 @@
 doctype html
 html
   head
-    title dine 
+    title dine - welcome to my world
     link(rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css")
     link(rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css")
     link(rel="stylesheet" type="text/css" href="/stylesheets/style.css")
-    link(rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato:300,600")
+    link(rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Noto+Sans+TC")
     meta(name="viewport" content="width=device-width, initial-scale=.7, maximum-scale=.7")
-    
+
   .page-header
     a.top-menu(href="/projects") projects
     span
@@ -16,8 +16,8 @@ html
     a.top-menu(href="/") home
       h1
         a(href="/") dinw
-    
-    
+
+
   body
     div#content
       block content
