--- a/views/dinw/projects.pug
+++ b/views/dinw/projects.pug
@@ -1,4 +1,14 @@
 extends layout
 
 block content
-  p Soon...
+  div.card
+      .wrap
+        h1 My projects
+          .task
+            .abstract
+              h3 abstract
+              p Default text
+            .details
+              .details__inner
+                h3 test 
+                p test test
