--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -6,7 +6,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Lato", sans-serif;
+  font-family: 'Noto Sans TC', sans-serif;
 }
 
 body {
@@ -42,7 +42,7 @@ body {
   #title {
     font-size: 96px;
     font-weight: 400;
-    font-family: "Lato", sans-serif;
+    font-family: "Noto Sans TC", sans-serif;
   }
 
   #line {
@@ -85,7 +85,7 @@ body {
   background-color: white;
   color: black;
   text-align: left;
-  font-family: "Lato", sans-serif;
+  font-family: "Noto Sans TC", sans-serif;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
   text-align: justify;
 
@@ -94,7 +94,7 @@ body {
   }
 
   p {
-    font-family: "Lato", sans-serif;
+    font-family: "Noto Sans TC", sans-serif;
     font-weight: 400px;
     font-size: 20px;
     line-height: 28px;
@@ -142,6 +142,6 @@ body {
 		float: right;
 		font-size: 26px;
 		margin-right: 20px;
-	}
+}
 }
 }
